apache-camel/springboot-camel-play/cd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: springboot-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /tmp/(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-camel-play
                port:
                  number: 8080
          - path: /springboot-camel-play/(.*)
            pathType: Prefix
            backend:
              service:
                name: springboot-camel-play
                port:
                  number: 8080
